Swagger genreated client code for api access
